Code changes to, 1) Add smooth scrolling using JS 2) Show/hide mobile navbar on Mobile screen 3) Fix flexbox "gap" property on older version of Safari browsers 4) Added favicons for browser, apple devices and android devices 5) Optimized images 6) Added ticky navigationbar 5) Code formatting

--- a/css/general.css
+++ b/css/general.css
@@ -62,7 +62,7 @@ Medium: 11px
   box-sizing: border-box;
 }
 
-*:focus{
+*:focus {
   outline: none;
   /* outline: 4px dotted #e67e22;
   outline-offset: 8px ; */
@@ -73,8 +73,8 @@ html {
   /* 10px / 16px = 62.5% */
   font-size: 62.5%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
-
+  /* Does not works on Safari for iOS and iPad */
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -82,6 +82,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  /* Only works if there is no element positioned absolutely to the body */
   overflow-x: hidden;
 }
 
@@ -94,7 +95,7 @@ body {
   column-gap: 6.4rem;
 }
 
-.grid:not(:last-child){
+.grid:not(:last-child) {
   margin-bottom: 9.6rem;
 }
 
@@ -106,12 +107,11 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.grid--4-cols{
+.grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
-
 }
 
-.grid--5-cols{
+.grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
 }
 
@@ -214,7 +214,7 @@ body {
   margin-bottom: 4.8rem !important;
 }
 
-.center-text{
+.center-text {
   text-align: center;
 }
 
