--- a/css/queries.css
+++ b/css/queries.css
@@ -165,95 +165,150 @@ Instead we assume that 1rem = 1em = 16px */
 /* ********************************* */
 
 @media (max-width: 44em) {
-  .grid--3-cols, .grid--4-cols{
+  .grid--3-cols,
+  .grid--4-cols {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .diets{
+  .diets {
     grid-column: 1/-1;
     justify-self: center;
   }
 
-  .pricing-plan{
+  .pricing-plan {
     width: 100%;
   }
 
-    .grid-footer{
-      grid-template-columns: repeat(6, 1fr);
-      row-gap: 6.4rem;
-    }
-  .nav-col{
+  .grid-footer {
+    grid-template-columns: repeat(6, 1fr);
+    row-gap: 6.4rem;
+  }
+  .nav-col {
     grid-row: 1;
     grid-column: span 2;
     margin-bottom: 3.2rem;
   }
 
-  .logo-col, .address-col{
-    grid-column: span 3 ;
+  .logo-col,
+  .address-col {
+    grid-column: span 3;
   }
 }
 
 /* ********************************* */
 /* BELOW 544px (Phones) */
 /* ********************************* */
-@media (max-width:34em){
-  .grid{
+@media (max-width: 34em) {
+  .grid {
     row-gap: 4.8rem;
   }
   .grid--2-cols,
   .grid--3-cols,
-  .grid--4-cols{
+  .grid--4-cols {
     grid-template-columns: 1fr;
   }
 
-.btn,
-.btn:link,
-.btn:visited {
-  padding: 2.4rem 1.6rem;
-}
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
 
-  .section-hero{
+  .section-hero {
     padding: 2.4rem 0 6.4rem 0;
   }
-  .hero{
+  .hero {
     padding: 0 3.2rem;
   }
 
-  .hero-img{
+  .hero-img {
     width: 80%;
   }
 
-  .logos img{
+  .logos img {
     height: 1.2rem;
   }
 
-  .step-img-box:nth-child(2){
+  .step-img-box:nth-child(2) {
     grid-row: 1;
   }
 
-  .step-img-box:nth-child(6){
+  .step-img-box:nth-child(6) {
     grid-row: 5;
   }
 
-  .testimonials{
+  .testimonials {
     grid-template-columns: 1fr;
   }
 
-  .gallery{
+  .gallery {
     grid-template-columns: repeat(4, 1fr);
     gap: 1.2rem;
   }
 
-  .cta{
+  .cta {
     grid-template-columns: 1fr;
   }
 
-  .cta-text-box{
+  .cta-text-box {
     padding: 3.2rem;
   }
 
-  .cta-img-box{
+  .cta-img-box {
     height: 32rem;
     grid-row: 1;
+  }
+}
+
+/**************************/
+/* Fixing Safari flexbox gap */
+/**************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 }
