--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,23 @@
   background-color: #cf711f;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+  z-index: 999;
+}
+
+.section-hero--sticky-fix {
+  margin-top: 9.6rem;
+}
+
 /* **************** */
 
 /* HERO SECTION */
@@ -117,7 +134,6 @@
   font-weight: 700;
 }
 
-
 /* ********************************* */
 /* MOBILE NAV */
 /* ********************************* */
@@ -126,6 +142,7 @@
   background: none;
   cursor: pointer;
   display: none;
+  z-index: 10;
 }
 
 .icon-mobile-nav {
@@ -133,8 +150,8 @@
   width: 4.8rem;
 }
 
-.icon-mobile-nav[name="close-outline"]{
-display: none;
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /* ********************************* */
